--- a/app/views/forms/_form8955SSA.html.erb
+++ b/app/views/forms/_form8955SSA.html.erb
@@ -33,7 +33,7 @@
                       </div>
                       <div class="clear">&nbsp;</div>
 <!-- end label parts -->  
-                          <div id="fields-container" class="form8955ssa">
+                          <div id="fields-container" class="form8955ssa" style="padding-bottom: 2%;">
                              <img width="100%" src="/
 media/8955ssa.png" />
 
