--- a/app/views/layouts/adminshow.html.erb
+++ b/app/views/layouts/adminshow.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>App</title>
+    <title>Admin</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
@@ -12,7 +12,7 @@
     <div id="wrapper">
 
         <!-- Navigation -->
-        <nav class="navbar navbar-default navbar-static-top" role="navigation" style="margin-bottom: 0">
+        <nav class="navbar navbar-default navbar-static-top admin" role="navigation" style="margin-bottom: 0">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
@@ -20,13 +20,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="/">Government Forms</a>
+                <a class="navbar-brand" href="/admin">Administration</a>
 
             </div>
             <!-- /.navbar-header -->
-            <button type="button" class="btn btn-primary header-button" onclick="document.getElementById('form1').submit();">Save Form</button>
-            <button type="button" onclick="history.back();" class="btn btn-warning header-button">Cancel</button>
-            
+            <button type="button" onclick="document.getElementById('form1').action='/admin/export';document.getElementById('form1').submit();" class="btn btn-danger header-button">Export the Form</button>
+            <button type="button" onclick="history.back();" class="btn btn-default header-button">Cancel</button>
 
             <ul class="nav navbar-top-links navbar-right">
                 <!--
@@ -166,6 +165,7 @@
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="fa fa-bell fa-fw"></i> <i class="fa fa-caret-down"></i>
                     </a>
+
                     <ul class="dropdown-menu dropdown-alerts">
                         <li>
                             <a href="#">
@@ -234,20 +234,20 @@
                         <li class="divider"></li>
                         <% if user_signed_in? %>
                           <li>
-                          <%= link_to( destroy_user_session_path, method: :delete) do %>  
+                          <%= link_to( destroy_user_session_path, method: :delete) do %>
                           <i class="fa fa-sign-out fa-fw"></i> Logout</a>
                           <% end %>
-      
+
                           </li>
                         <% else %>
                           <li>
                           <%= link_to(new_user_session_path) do %>
                           <i class="fa fa-sign-in fa-fw"></i> Login</a>
-                          <% end %>  
+                          <% end %>
                           </li>
                         <% end %>
-                       
-                       
+
+
                     </ul>
                     <!-- /.dropdown-user -->
                 </li>
@@ -255,71 +255,11 @@
             </ul>
             <!-- /.navbar-top-links -->
 
-            <div class="navbar-default sidebar" role="navigation">
-                <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
-<!--
-                        <li class="sidebar-search">
-                            <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </span>
-                            </div>
-                        </li>
--->
-                        <li>
-                            <a href="/dashboard"><i class="fa fa-list-ul fa-fw"></i> Dashboard</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-asterisk fa-fw"></i> Forms<span class="fa arrow"></span></a>
-                            <ul class="nav nav-second-level collapse in">
-                                <li>
-                                  <a href="/form/show/1099a">Form 1099</a>
-                              </li>
-                                <li>
-                                    <a href="/form/show">Form 1042-S</a>
-                                </li>
-                                <li>
-                                    <a href="/form/show/8027">Form 8027</a>
-                                </li>
-                                <li>
-                                    <a href="/form/show/1098">Form 1098</a>
-                                </li>
-                                <li>
-                                    <a href="/form/show/1097">Form 1097</a>
-                                </li>
-                                <li>
-                                    <a href="/form/show/3922">Form 3922</a>
-                                </li>
-                                <li>
-                                    <a href="/form/show/fW2g">Form W-2G</a>
-                                </li>
-                                <li>
-                                    <a href="/form/show/3921">Form 3921</a>
-                                </li>
-                                <li>
-                                    <a href="/form/show/5498">Form 5498</a>
-                                </li>
-                                
-                                <li>
-                                    <a href="/form/show/8955ssa">Form 8955-SSA</a>
-                                </li>
-                            </ul>
-                            <!-- /.nav-second-level -->
-                        </li>
-                        
-                        
-                    </ul>
-                </div>
-                <!-- /.sidebar-collapse -->
-            </div>
+            
             <!-- /.navbar-static-side -->
         </nav>
 
-        <div id="page-wrapper">
+        <div id="page-wrapper" class="admin">
            <% if notice %>
            <div class="row">
               <div class="header col-lg-12">
@@ -344,7 +284,24 @@
 
 </div>
 
-
+<style>
+#page-wrapper.admin {
+    margin-left:0px;
+}
+.navbar-default.admin {
+    background-color: #444444;
+    border-color: #000000;
+}
+.navbar-default.admin .navbar-brand {
+    color:white;
+}
+#label-container, #labels-colors, span.instructions, a.instructions {
+    display:none;
+}
+.navbar-top-links li a {
+    color: #ffffff;
+}
+</style>
 
 
 
