--- a/app/views/forms/_form1099sa.html.erb
+++ b/app/views/forms/_form1099sa.html.erb
@@ -4,15 +4,12 @@
                              <form id="form1" action="/form/save">
                         <!-- Label part -->
                             <div id="label-container">
-                              Label:
+                              Filing Company:
                               <%= select_tag(:label, options_for_select(@labels,@form_fields['label']),{id: "label", class: "form-control"} )%>
-                              <div  id="label-other-container"> Please enter a new label and choose color:&nbsp;&nbsp;
+                              <div  id="label-other-container"> Please enter a new label:&nbsp;&nbsp;
                                   <div class="input-group">
                                     <input id="label-other"  class ="form-control" type="text" name="label_other" value="">
-                                    <div class="input-group input-append color" data-color="rgb(213,215,219)" data-color-format="rgb" id="cp4">
-                                        <input type="text" class="form-control"  aria-describedby="basic-addon1" value="rgb(213,215,219)" name="label_color" readonly="readonly">
-                                        <span class=" add-on input-group-addon"><i style="background-color: rgb(213,215,219);"></i></span>
-                                    </div>
+                                    
                                   </div>
                               </div>
                             </div>
@@ -23,7 +20,7 @@
                                    else 
                                       @additional_style = ''
                                    end %>
-                                <div style="background:<%= color[1] %>;<%= @additional_style %>" id="color-<%= color[0].delete(' ') %>" class="color-box"></div>
+                              
                                 <% end %>
                             </div>
                             <div class="clear">&nbsp;</div>
