--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,11 +10,12 @@
  * files in this directory. Styles in this file should be added after the last require_* statement.
  * It is generally better to create a new file per style scope.
  *
+ * require font-awesome.min
+ * require font-awesome-animation.min
+
  *= require bootstrap.min
  *= require sb-admin-2.min
  *= require metisMenu.min
- *= require font-awesome.min
- *= require font-awesome-animation.min
  *= require_tree .
  *= require_self
  */
