--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,7 +26,7 @@ div.header {
 div.rel {
     position:relative;
 }
-input.abs {
+input.abs, textarea.abs {
     display: block;
     position: absolute;
     border: none;
