--- a/app/views/forms/_form3921.html.erb
+++ b/app/views/forms/_form3921.html.erb
@@ -33,7 +33,7 @@
                              <img width="100%" src="/
 media/3921.png" />
                               <!-- fields -->
-                                    <input class="abs" style="top: 13%;left: 1.5%;width: 44%;height: 21%;" name="transferors_name_address" value="<%= @form_fields['transferors_name_address']%>" type="text">
+                                    <textarea class="abs" style="top: 13%;left: 1.5%;width: 44%;height: 21%;position: absolute;" name="transferors_name_address"><%= @form_fields['transferors_name_address']%></textarea>                                    
                                     <input class="abs" style="top: 39%;left: 1.5%;width: 21.5%;height: 5.5%;" name="transferors_fin" value="<%= @form_fields['transferors_fin']%>" type="text">
                                     <input class="abs" style="top: 39%;left: 24%;width: 22%;height: 5.5%;" name="employees_id" value="<%= @form_fields['employees_id']%>" type="text">
                                     <input class="abs" style="top: 49%;left: 1.5%;width: 44.5%;height: 10%;" name="employees_name" value="<%= @form_fields['employees_name']%>" type="text">
