stripe payment added

--- a/app/views/layouts/formedit.html.erb
+++ b/app/views/layouts/formedit.html.erb
@@ -28,7 +28,7 @@
             <button type="button" onclick="history.back();" class="btn btn-warning header-button">Cancel</button>
             <button type="button" class="btn btn-primary header-button" onclick="document.getElementById('form1').submit();">Save Form</button>
             <button type="button" class="btn btn-default">Print Form</button>
-            <button type="button" class="btn btn-default">Submit Electronically</button>
+            <button type="button" onclick="window.location = '/form/checkout'" class="btn btn-default">Submit Electronically</button>
             
 
             <ul class="nav navbar-top-links navbar-right">
