stripe payment changes

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -115,3 +115,6 @@ div.bhoechie-tab-menu div.list-group>a.active:after {
 a.navbar-brand {
     font-size:21px;
 }
+.btn-default span {
+    min-height: inherit!important;
+}
