--- a/app/views/forms/_form3921.html.erb
+++ b/app/views/forms/_form3921.html.erb
@@ -40,8 +40,10 @@ media/3921.png" />
                                     <input class="abs" name="street_address" value="<%= @form_fields['street_address']%>" style="top: 64%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
                                     <input class="abs" name="city_town_state" value="<%= @form_fields['city_town_state']%>" style="top: 74.2%;left: 1.5%;width: 44.5%;height: 5%;" type="text">
                                     <input class="abs" name="account_number" value="<%= @form_fields['account_number']%>" style="top: 84%;left: 1.5%;width: 44.5%;height: 5.3%;" type="text">
-                                    <input class="abs" name="1" value="<%= @form_fields['1']%>" style="top: 10%;left: 47.5%;width: 17%;height: 9.3%;" type="text">
-                                    <input class="abs" name="2" value="<%= @form_fields['2']%>" style="top: 25%;left: 47.5%;width: 17%;height: 9.3%;" type="text">
+    <input type="text" readonly class="datepicker abs" name="1" value="<%= @form_fields['1']%>" style="top: 10%;left: 47.5%;width: 17%;height: 9.3%">
+                                   <!-- top: 10%;left: 47.5%;width: 17%;height: 9.3% -->
+    <input type="text" readonly class="datepicker abs" name="2" value="<%= @form_fields['2']%>" style="top: 25%;left: 47.5%;width: 17%;height: 9.3%;">
+                                   
                                     <input class="abs" name="3" value="<%= @form_fields['3']%>" style="top: 40%;left: 48%;width: 16.5%;height: 9.3%;" type="text">
                                     <input class="abs" name="4" value="<%= @form_fields['4']%>" style="top: 42%;left: 67%;width: 16.5%;height: 7.3%;" type="text">
                                     <input class="abs" name="5" value="<%= @form_fields['5']%>" style="top: 54%;left: 47%;width: 17.5%;height: 5.3%;" type="text">
@@ -58,6 +60,8 @@ media/3921.png" />
                     
             </div>
             <!-- /.row -->
-
-
-
+<script>
+jQuery('.datepicker').datepicker({
+    dateFormat: "yymmdd"
+  });
+</script>
