--- a/app/views/forms/_form1099a.html.erb
+++ b/app/views/forms/_form1099a.html.erb
@@ -30,12 +30,15 @@
                                 <div id="fields-container" class="form1099a">
                                    <img width="100%" src="/media/1099a.png" />
 
-                                   <input class="abs" style="top: 14%;left: 1%;width: 45%;height:20%;" name="lenders_name_address" value="<%= @form_fields['lenders_name_address']%>" type="text">
+                                   <textarea  class="abs" style="top: 14%;left: 1%;width: 45%;height:20%;" name="lenders_name_address"> <%= @form_fields['lenders_name_address']%></textarea>
                                     <input class="abs" style="top: 39%;left: 1%;width: 22%;height:6%;" name="lenders_fin" value="<%= @form_fields['lenders_fin']%>" type="text">
                                     <input class="abs" style="top: 39%;left: 24%;width: 22%;height:6%;border:1px solid black" name="borrowers_id" value="<%= @form_fields['borrowers_id']%>" type="text">
                                     
                                     <input class="abs" style="top: 49%;left: 1%;width: 45%;height:10%;border:1px solid black" name="borrowers_name" value="<%= @form_fields['borrowers_name']%>" type="text">
-                                    <input class="abs" style="top: 38%;left: 47%;width: 18%;height:6%;border:1px solid black" name="1" value="<%= @form_fields['1']%>" type="text">
+                                    
+<input type="text" readonly class="datepicker abs" name="1" value="<%= @form_fields['1']%>" style="top: 38%;left: 47%;width: 18%;height:6%;border:1px solid black">
+
+
                                     <input class="abs" style="top: 38%;left: 68%;width: 16%;height:6%;border:1px solid black" name="2" value="<%= @form_fields['2']%>" type="text">
                                     <input class="abs" style="top: 46%;left: 48%;width: 17%;height: 13%;" name="3" value="<%= @form_fields['3']%>" type="text">
                                     <input class="abs" style="top: 49%;left: 68%;width: 16%;height:10%;border:1px solid black" name="4" value="<%= @form_fields['4']%>" type="text">
@@ -60,3 +63,8 @@
                           
                   </div>
                   <!-- /.row -->
+<script>
+jQuery('.datepicker').datepicker({
+    dateFormat: "yymmdd"
+  });
+</script>
