--- a/app/views/layouts/adminshow.html.erb
+++ b/app/views/layouts/adminshow.html.erb
@@ -286,7 +286,7 @@
                   <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Change Status:
                   <span class="caret"></span></button>
                   <ul class="dropdown-menu">
-                    <li><a href="/admin/changestatus/marked_as_payed/<%= params[:formname] %>/<%= params[:unique_id] %>">Marked as Payed</a></li>
+                    <li><a href="/admin/changestatus/marked_as_paid/<%= params[:formname] %>/<%= params[:unique_id] %>">Marked as Paid</a></li>
                     <li><a href="/admin/changestatus/submitted_to_fire/<%= params[:formname] %>/<%= params[:unique_id] %>">Submitted to FIRE</a></li>
                     <li><a href="/admin/changestatus/rejected_by_fire/<%= params[:formname] %>/<%= params[:unique_id] %>">Rejected by FIRE</a></li>
                     <li><a href="/admin/changestatus/accepted_by_fire/<%= params[:formname] %>/<%= params[:unique_id] %>">Accepted by FIRE</a></li>
