--- a/app/views/layouts/formedit.html.erb
+++ b/app/views/layouts/formedit.html.erb
@@ -28,18 +28,22 @@
             <button type="button" class="btn btn-primary header-button" onclick="document.getElementById('form1').submit();">Save Form</button>
             <button type="button" class="btn btn-default">Print Form</button>
             <%  if (params.has_key?(:unique_id)) %>
-                    <%= form_tag form_payment_path, :class => 'submit_electronically_form' do %>
-                       <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>"/>
-                       <input type="hidden" name="amount" value="<%= @stripe_amount %>"/>
-                        <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
-                      data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
-                      data-description="Pay Submission Fee Via Stripe"
-                      data-amount="<%= @stripe_amount %>"
-                      data-locale="auto"
-                      data-label="Submit Electronically">
-                       </script>
-                       <script>$(".stripe-button-el").attr('class', 'btn btn-default');
-                       </script>
+                    <% if (current_user.bonus==0) %>
+                        <%= form_tag form_payment_path, :class => 'submit_electronically_form' do %>
+                           <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>"/>
+                           <input type="hidden" name="amount" value="<%= @stripe_amount %>"/>
+                            <script src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+                          data-key="<%= Rails.configuration.stripe[:publishable_key] %>"
+                          data-description="Pay Submission Fee Via Stripe"
+                          data-amount="<%= @stripe_amount %>"
+                          data-locale="auto"
+                          data-label="Submit Electronically">
+                           </script>
+                           <script>$(".stripe-button-el").attr('class', 'btn btn-default');
+                           </script>
+                        <% end %>
+                    <% else %>
+                        <button onclick="window.location.href = '/form/submitted/<%= @form_fields['unique_id'] %>';" type="submit" class="btn btn-default" style="visibility: visible;"><span style="display: block; min-height: 30px;">Submit Electronically <span style="color:blue;">for Free</span></span></button>
                     <% end %>
             <% end %>
             
@@ -238,6 +242,7 @@
                 </li>
 -->
                 <!-- /.dropdown -->
+                <li><a href="/referfriend">Refer a Friend</a></li>
                 <li class="dropdown">
                     <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
