--- a/app/views/forms/_form1099s.html.erb
+++ b/app/views/forms/_form1099s.html.erb
@@ -1,6 +1,14 @@
+<script src="https://cdnjs.cloudflare.com/ajax/libs/1000hz-bootstrap-validator/0.11.9/validator.min.js"></script>
 <div class="row">
                           <div class="rel col-lg-12">
-                             
+                              <div>
+                                Important Notes:
+<br/><br/>
+Please enter a data for the first left field  in three lines. A first line should contain your name, second line the address , third line should contain City , State code and ZIP in that order.<br/>
+Identification numbers (Fereral ID) should contain only numbers.<br/>
+'Gross proceeds' should contain only amount without USD or $ sign.<br/>
+In 'City or town, state or province ...' field you should enter transferor's city then state code then zip code in that order.<br/>
+                              </div>
                              <form id="form1" action="/form/save">
                         <!-- Label part -->
                             <div id="label-container">
@@ -12,6 +20,7 @@
                                     
                                   </div>
                               </div>
+                              
                             </div>
                             <div id="labels-colors">
                                 <% @colors_array.each do |color| %>
@@ -26,19 +35,20 @@
                             <div class="clear">&nbsp;</div>
                         <!-- end label parts -->  
                                 <div id="fields-container" class="form1099s">
+                                 
                                    <img width="100%" src="/media/1099s.png" />
                                     
                                     <!-- fields -->
-                                    <textarea class="abs" style="top: 13%;left: 1%;width: 45%;height: 21%;" name="filers_name_address"><%= @form_fields['filers_name_address']%></textarea>
-                                    <input class="abs" name="filers_fid" value="<%= @form_fields['filers_fid']%>" style="top: 39%;left: 1%;width: 22%;height: 5%;" type="text">
-                                    <input class="abs" name="transferors_id" value="<%= @form_fields['transferors_id']%>" style="top: 39%;left: 24%;width: 22%;height: 5%;" type="text">
-                                    <input class="abs" name="transferors_name" value="<%= @form_fields['transferors_name']%>" style="top: 49%;left: 1%;width: 45%;height: 10%;" type="text">
-                                    <input class="abs" name="street_address" value="<%= @form_fields['street_address']%>" style="top: 64%;left: 1%;width: 45%;height: 5%;" type="text">
-                                    <input class="abs" name="city_town_state" value="<%= @form_fields['city_town_state']%>" style="top: 74%;left: 1%;width: 45%;height: 5%;" type="text">
-                                    <input class="abs" name="account_number" value="<%= @form_fields['account_number']%>" style="top: 84%;left: 1%;width: 45%;height: 5%;" type="text">
-  <input type="text" readonly class="datepicker abs" name="1" value="<%= @form_fields['1']%>" style="top: 9%;left: 47%;width: 18%;height: 10%;">
-                                    <input class="abs" name="2" value="<%= @form_fields['2']%>" style="top: 24%;left: 48.5%;width: 16.5%;height: 10%;" type="text">
-                                    <input class="abs" name="3" value="<%= @form_fields['3']%>" style="top: 39%;left: 47%;width: 37%;height: 15%;" type="text">
+                                    <textarea required="true" class="abs" style="top: 13%;left: 1%;width: 45%;height: 21%;" name="filers_name_address"><%= @form_fields['filers_name_address']%></textarea>
+                                    <input required="true" class="abs" name="filers_fid" value="<%= @form_fields['filers_fid']%>" style="top: 39%;left: 1%;width: 22%;height: 5%;" type="text">
+                                    <input required="true" class="abs" name="transferors_id" value="<%= @form_fields['transferors_id']%>" style="top: 39%;left: 24%;width: 22%;height: 5%;" type="text">
+                                    <input required="true" class="abs" name="transferors_name" value="<%= @form_fields['transferors_name']%>" style="top: 49%;left: 1%;width: 45%;height: 10%;" type="text">
+                                    <input required="true" class="abs" name="street_address" value="<%= @form_fields['street_address']%>" style="top: 64%;left: 1%;width: 45%;height: 5%;" type="text">
+                                    <input required="true" class="abs" name="city_town_state" value="<%= @form_fields['city_town_state']%>" style="top: 74%;left: 1%;width: 45%;height: 5%;" type="text">
+                                    <input required="true" class="abs" name="account_number" value="<%= @form_fields['account_number']%>" style="top: 84%;left: 1%;width: 45%;height: 5%;" type="text">
+  <input type="text" required="true" readonly class="datepicker abs" name="1" value="<%= @form_fields['1']%>" style="top: 9%;left: 47%;width: 18%;height: 10%;">
+                                    <input required="true" class="abs" name="2" value="<%= @form_fields['2']%>" style="top: 24%;left: 48.5%;width: 16.5%;height: 10%;" type="text">
+                                    <input required="true" class="abs" name="3" value="<%= @form_fields['3']%>" style="top: 39%;left: 47%;width: 37%;height: 15%;" type="text">
                                    
                         <input name="4" value="unchecked" type="hidden">
                         <input class="abs" style="top:57.4%;left:82.2%;" name="4" <%= @form_fields['4']%> value="checked" type="checkbox">
@@ -47,11 +57,13 @@
                         <input name="5" value="unchecked" type="hidden">
                         <input class="abs" style="top:70%;left:82.1%;" name="5" <%= @form_fields['5']%> value="checked" type="checkbox">
 
-                                    <input class="abs" name="6" value="<%= @form_fields['6']%>" style="top: 83.5%;left: 48.5%;width: 35.5%;height: 5%;" type="text">
+                                    <input required="true" class="abs" name="6" value="<%= @form_fields['6']%>" style="top: 83.5%;left: 48.5%;width: 35.5%;height: 5%;" type="text">
                                   <!-- fields -->
                                     
                                     <input type="hidden" name="unique_id" value="<%= @form_fields['unique_id'] %>">
-                                    <input type="hidden" name="form_id" value="1099s"> 
+                                    <input type="hidden" name="form_id" value="1099s">                                     
+                                    <button class="btn btn-primary fixed-button" type="submit">Save Form</button>
+
                                 </div><!-- fields-container -->
                               </form>
                               
