more 1099 type forms has been added

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -123,7 +123,7 @@ form.submit_electronically_form {
     display:inline;
 }
 label[for=form-type] , #form-type {
-    display:none;
+    /*display:none;*/
 }
 .fixed-button {
     position: fixed;
