--- a/app/views/forms/show.html.erb
+++ b/app/views/forms/show.html.erb
@@ -20,7 +20,8 @@
             <!-- select form : -->
             <div class="form-group">
               <label for="form-type">Select form:</label>
-                  <% @form_types = [['1099-A', '1099a'], ['1099-B', '1099b'], ['1099-C','1099c'], ['1099-CAP','1099cap'], ['1099-DIV','1099div'], ['1099-G','1099g'], ['1099-H','1099h'], ['1099-INT','1099int'], ['1099-K','1099k'], ['1099-LTC','1099ltc'], ['1099-MISC','1099misc'], ['1099-OID','1099oid'], ['1099-PATR','1099patr'], ['1099-Q','1099q'], ['1099-R','1099r'], ['1099-S','1099s'], ['1099-SA','1099sa']] %>
+                  <% # @form_types = [['1099-A', '1099a'], ['1099-B', '1099b'], ['1099-C','1099c'], ['1099-CAP','1099cap'], ['1099-DIV','1099div'], ['1099-G','1099g'], ['1099-H','1099h'], ['1099-INT','1099int'], ['1099-K','1099k'], ['1099-LTC','1099ltc'], ['1099-MISC','1099misc'], ['1099-OID','1099oid'], ['1099-PATR','1099patr'], ['1099-Q','1099q'], ['1099-R','1099r'], ['1099-S','1099s'], ['1099-SA','1099sa']] %>
+                   <% @form_types = [['1099-A', '1099a'], ['1099-B', '1099b'], ['1099-C','1099c'], ['1099-CAP','1099cap'], ['1099-DIV','1099div'], ['1099-G','1099g'], ['1099-H','1099h'], ['1099-INT','1099int'], ['1099-K','1099k'] ]%>
                   <%= select_tag(:form_type, options_for_select(@form_types,params['formname']),{id: "form-type",class: "form-control"} )%>          
             </div>
             
