--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -279,7 +279,7 @@
                             <a href="#"><i class="fa fa-asterisk fa-fw"></i> Forms<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level">
                               <li>
-                                  <a href="/form/show/1099s">Form 1099-S</a>
+                                  <a href="/form/show/1099s">Form 1099</a>
                               </li>
                              <!--   <li>
                                     <a href="/form/show">Form 1042-S</a>
