--- a/app/views/layouts/formedit.html.erb
+++ b/app/views/layouts/formedit.html.erb
@@ -305,8 +305,9 @@
                         <li>
                             <a href="#"><i class="fa fa-asterisk fa-fw"></i> Forms<span class="fa arrow"></span></a>
                             <ul class="nav nav-second-level collapse in">
-                                <li>
-                                  <a href="/form/show/1099s">Form 1099-S</a>
+                              <li>
+                                    <a href="/form/show/1099s">Form 1099</a>
+
                               </li>
                               <!--  <li>
                                     <a href="/form/show">Form 1042-S</a>
